--- a/mayor.html
+++ b/mayor.html
@@ -1,84 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Jamie for Mayor 2025 — United for E‑Town</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jamie for Mayor 2025 — United for E-Town</title>
+  <meta name="description" content="Jamie for Mayor 2025 — steady, practical leadership for Elizabethtown. Strong schools, safer streets, and a healthy downtown.">
+  <link rel="canonical" href="https://unitedforetown.com/mayor.html">
+
+  <!-- Social -->
+  <meta property="og:title" content="Jamie for Mayor 2025 — United for E-Town">
+  <meta property="og:description" content="Steady, practical leadership for Elizabethtown.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://unitedforetown.com/mayor.html">
+  <meta property="og:image" content="https://unitedforetown.com/assets/og-image.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-<header class="header">
-  <div class="container nav">
-    <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="United for E-Town logo" width="48" height="48">
-      <span class="brand-title">United for E-Town</span>
-    </a>
-    <nav class="menu" aria-label="Primary">
-      <a href="about.html">About</a>
-      <a href="mayor.html">Mayor 2025</a>
-      <a href="candidates.html">Candidates</a>
-      <a href="issues.html">Issues &amp; Advocacy</a>
-      <a href="events.html">Events</a>
-      <a href="news.html">News</a>
-      <a class="cta" href="get-involved.html">Get Involved</a>
-      <a class="cta secondary" href="donate.html">Donate</a>
-    </nav>
-  </div>
-</header>
-
-
-        <section class="hero">
-          <div class="container">
-            <div class="grid cols-2" style="align-items:center">
-              <div>
-                <div class="badge">United for E‑Town</div>
-                <h1>Jamie Fickes for Mayor 2025</h1>
-                <p>United for E‑Town — a campaign that puts community first.</p>
-                <div class="actions">    <a class="btn primary" href="get-involved.html">Join Us</a>
-                  <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
-                  <a class="btn ghost" href="issues.html">See the Issues</a>
-                </div>
-              </div>
-              <div style="justify-self:end;text-align:right">
-                <img src="assets/logo.png" alt="United for E-Town logo" />
-              </div>
-            </div>
-          </div>
-        </section>
-        
-<main>
-<section class="section">
- <div class="container grid cols-2" style="align-items:center">
-  <div>
-    <h2>Why I’m Running</h2>
-    <p>Elizabethtown deserves strong schools, safe streets, and a welcoming, thriving main street. As Mayor, Jamie will focus on practical progress and transparency — no drama, just results.</p>
-    <div class="actions">
-      <a class="btn primary" href="donate.html">Donate</a>
-      <a class="btn ghost" href="get-involved.html">Volunteer</a>
+<body class="mayor">
+  <!-- Header -->
+  <header class="header">
+    <div class="container nav">
+      <a class="brand" href="index.html">
+        <img src="assets/logo.png" alt="United for E-Town logo" width="48" height="48">
+        <span class="brand-title">United for E-Town</span>
+      </a>
+      <nav class="menu" aria-label="Primary">
+        <a href="about.html">About</a>
+        <a href="mayor.html" aria-current="page">Mayor 2025</a>
+        <a href="candidates.html">Candidates</a>
+        <a href="issues.html">Issues &amp; Advocacy</a>
+        <a href="events.html">Events</a>
+        <a href="news.html">News</a>
+        <a class="cta" href="get-involved.html">Get Involved</a>
+        <a class="cta secondary" href="donate.html">Donate</a>
+      </nav>
     </div>
-  </div>
-  <div>
-    <img src="assets/group.jpg" class="img-fluid" alt="Campaign team">
-  </div>
- </div>
-</section>
-</main>
+  </header>
 
-    <footer class="footer">
-      <div class="container">
-        <div class="grid cols-3">
-          <div>
-            <strong>United for E‑Town</strong><br>
-            <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
+  <!-- Hero -->
+  <section class="hero hero--sub">
+    <div class="container">
+      <div class="grid cols-2" style="align-items:center">
+        <div>
+          <div class="badge">United for E-Town</div>
+          <h1>Jamie Fickes for Mayor 2025</h1>
+    	  <p class="lead">Steady, practical leadership for Elizabethtown—strong schools, safer streets, and a healthy downtown.</p>
+          <div class="actions">
+            <a class="btn primary" href="https://secure.actblue.com/donate/united-for-etown-1" target="_blank" rel="noopener">Donate</a>
+            <a class="btn ghost" href="get-involved.html">Volunteer</a>
+            <a class="btn accent" href="#priorities">See Priorities</a>
           </div>
-          <div>
-            <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">Email Us</a></div>
-            <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61574407626864">UnitedForETown</a></div>
-          </div>
-          <div class="small">Paid for by United for E‑Town. © 2025.</div>
+        </div>
+        <div class="hero-media" aria-hidden="true" style="justify-self:end;text-align:right">
+          <img src="assets/jamie.jpg" alt="" width="220" height="220" loading="eager" decoding="async">
         </div>
       </div>
-    </footer>
-    
+    </div>
+  </section>
+
+  <main>
+    <!-- Why I'm running -->
+ <section class="section" id="why">
+  <div class="container grid cols-2" style="align-items:start; gap:2rem">
+    <div>
+      <h2>Why I’m running</h2>
+      <p class="lead">Jamie for Mayor 2025 is about doing the basics well and telling you the truth. I want E-Town to run on clear goals, tight budgets, and steady follow-through so schools, streets, and downtown actually improve. When something isn’t working, I’ll say it plainly, fix it with the team, and show you the results.</p>
+
+      <h3 style="margin:.5rem 0 0">What you can count on</h3>
+      <ul>
+        <li>Plain-language updates you can read in two minutes.</li>
+        <li>Budget discipline. Schools, safety, and downtown first.</li>
+        <li>Faster small fixes; real timelines for big work.</li>
+        <li>Respect in the room, even when we disagree.</li>
+        <li>Decisions based on data and lived impact—not headlines.</li>
+      </ul>
+
+      <div class="actions" style="margin-top:.75rem">
+        <a class="btn primary" href="https://secure.actblue.com/donate/united-for-etown-1" target="_blank" rel="noopener">Chip in</a>
+        <a class="btn ghost" href="get-involved.html">Pitch in an hour</a>
+      </div>
+    </div>
+
+    <div>
+      <img class="img-fluid" src="assets/group.jpg" alt="Neighbors with Jamie at a community event" loading="lazy">
+    </div>
+  </div>
+</section>
+
+
+
+    <!-- Priorities -->
+  <section class="section" id="priorities">
+  <div class="container">
+    <h2>Priorities</h2>
+
+    <div class="grid cols-3">
+      <!-- Strong Schools -->
+      <article class="card">
+        <h3>Strong Schools</h3>
+        <p>Back safe facilities, clear funding info, and real support for students.</p>
+        <ul>
+          <li>Safe Routes to School: crossings, traffic calming, lighting.</li>
+          <li>Regular joint sessions with the district on facility needs.</li>
+          <li>After-school and youth partners for mentoring and wellness.</li>
+        </ul>
+        <a class="btn ghost" href="issues.html#schools">School priorities →</a>
+      </article>
+
+      <!-- Safer Streets -->
+      <article class="card">
+        <h3>Safer Streets</h3>
+        <p>Make it safer to walk, bike, and drive—especially near schools and parks.</p>
+        <ul>
+          <li>Paint-and-post traffic-calming pilots on problem blocks.</li>
+          <li>Crosswalk beacons and timed school-zone speed enforcement.</li>
+          <li>Small fixes fast: potholes, signage, line striping.</li>
+        </ul>
+        <a class="btn ghost" href="issues.html#safety">Safety plan →</a>
+      </article>
+
+      <!-- Downtown & Small Business -->
+      <article class="card">
+        <h3>Downtown &amp; Small Business</h3>
+        <p>Make it easier to open, improve, and stay open on Main Street.</p>
+        <ul>
+          <li>One-stop permit help and plain-language checklists.</li>
+          <li>Pop-up and storefront activation program.</li>
+          <li>Facade micro-grants with local partners.</li>
+        </ul>
+        <a class="btn ghost" href="issues.html#economy">Economy plan →</a>
+      </article>
+
+      <!-- Open, Honest Government -->
+      <article class="card">
+        <h3>Open, Honest Government</h3>
+        <p>Tell you what’s happening, what it costs, and when it’s done.</p>
+        <ul>
+          <li>Two-minute updates after meetings in plain language.</li>
+          <li>Budgets and projects published with simple charts.</li>
+          <li>Service request tracker with response targets.</li>
+        </ul>
+        <a class="btn ghost" href="issues.html">Read all issues →</a>
+      </article>
+    </div>
+
+    <p class="small" style="margin-top:.75rem;color:#6b7280">
+      Full details live on the <a href="issues.html">Issues &amp; Advocacy</a> page.
+    </p>
+  </div>
+</section>
+
+
+    <!-- About Jamie -->
+    <section class="section" id="bio"> </section>
+
+    <!-- Endorsements (logos optional; use text fallback if no files yet) -->
+    <section class="section" id="endorsements">
+      <div class="container">
+        <h2>Endorsements</h2>
+
+        <!-- Logo grid (add logos if/when you have them; remove the sample spans) -->
+        <div class="endorsement-logos">
+          <!-- Example with a logo file:
+          <figure class="endorsement">
+            <img src="assets/endorsements/example-org.png" alt="Example Organization">
+          </figure>
+          -->
+		<figure class="endorsement">
+  <a href="https://www.pealpa.org/home" target="_blank" rel="noopener" aria-label="PEAL Center">
+    <img src="assets/endorsements/peal.png" alt="PEAL Center logo">
+  </a>
+  <figcaption>PEAL Center</figcaption>
+</figure>
+
+<figure class="endorsement">
+  <a href="https://www.facebook.com/EtownDemCommittee" target="_blank" rel="noopener" aria-label="Elizabethtown Democratic Committee">
+    <img src="assets/endorsements/etowndems.jpg" alt="Elizabethtown Democratic Committee logo">
+  </a>
+  <figcaption>Elizabethtown Democratic Committee</figcaption>
+</figure>
+
+<figure class="endorsement">
+  <a href="https://www.lancasterdems.com/" target="_blank" rel="noopener" aria-label="Lancaster County Democratic Committee">
+    <img src="assets/endorsements/lcdc.png" alt="Lancaster County Democratic Committee logo">
+  </a>
+  <figcaption>Lancaster County Democratic Committee</figcaption>
+</figure>
+
+        </div>
+
+        <p class="small" style="margin-top:.75rem;color:#6b7280">
+          Have an endorsement to share? <a href="mailto:unitedforetown@gmail.com">Email us</a>.
+        </p>
+      </div>
+    </section>
+
+    <!-- Get involved -->
+    <section class="section" id="volunteer">
+      <div class="container grid cols-3">
+        <article class="card">
+          <h3>Knock a few doors</h3>
+          <p>Take one block—easy script, short shift.</p>
+          <a class="btn ghost" href="get-involved.html#form">I can help →</a>
+        </article>
+        <article class="card">
+          <h3>Host a conversation</h3>
+          <p>Invite neighbors to your porch, a park, or a café.</p>
+          <a class="btn ghost" href="get-involved.html#form">Host →</a>
+        </article>
+        <article class="card">
+          <h3>Chip in</h3>
+          <p>Every dollar goes to outreach and materials.</p>
+          <a class="btn primary" href="https://secure.actblue.com/donate/united-for-etown-1" target="_blank" rel="noopener">Donate →</a>
+        </article>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <div class="grid cols-3">
+        <div>
+          <strong>United for E-Town</strong><br>
+          <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
+        </div>
+        <div>
+          <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>
+          <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
+        </div>
+        <div class="small">Paid for by United for E-Town. © 2025.</div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
