--- a/get-involved.html
+++ b/get-involved.html
@@ -82,7 +82,8 @@
         <h2>Tell us how you’d like to help</h2>
 
         <!-- Netlify Forms works by adding data-netlify and a hidden form-name input -->
-        <form name="volunteer" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="card" style="padding:1rem">
+<form name="volunteer" method="POST" action="/thank-you.html" data-netlify="true" netlify-honeypot="bot-field" class="card" style="padding:1rem">
+
           <input type="hidden" name="form-name" value="volunteer">
           <p style="display:none">
             <label>Don’t fill this out: <input name="bot-field"></label>
