--- a/get-involved.html
+++ b/get-involved.html
@@ -84,15 +84,10 @@
         <!-- Netlify Forms works by adding data-netlify and a hidden form-name input -->
 <form name="volunteer"
       method="POST"
-      action="/thank-you.html"     <!-- or your actual thank-you path -->
+      action="/thank-you.html"
       data-netlify="true"
       netlify-honeypot="bot-field"
       class="card" style="padding:1rem">
-  <input type="hidden" name="form-name" value="volunteer">
-  <!-- …your existing fields… -->
-</form>
-
-
           <input type="hidden" name="form-name" value="volunteer">
           <p style="display:none">
             <label>Don’t fill this out: <input name="bot-field"></label>
