--- a/index.html
+++ b/index.html
@@ -158,11 +158,12 @@
         </div>
       </div>
     </footer>
-<!-- Hidden Netlify init form (helps Netlify detect forms at build) -->
+<!-- Hidden Netlify init form so detection always works -->
 <form name="volunteer" data-netlify="true" netlify-honeypot="bot-field" hidden>
   <input type="hidden" name="form-name" value="volunteer">
   <input type="text" name="first_name">
 </form>
+
 
 </body>
 </html>
