--- a/get-involved.html
+++ b/get-involved.html
@@ -137,7 +137,7 @@
               <textarea name="notes" rows="4" placeholder="Anything we should know?"></textarea>
             </label>
           </p>
-
+<div data-netlify-recaptcha="true"></div>
           <p>
             <button class="btn primary" type="submit">Submit</button>
             <a class="btn ghost" href="mailto:unitedforetown@gmail.com">Email instead</a>
