--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
       </div>
     </footer>
-<!-- Hidden Netlify init form so detection always works -->
+<!-- Hidden Netlify init form -->
 <form name="volunteer" data-netlify="true" netlify-honeypot="bot-field" hidden>
   <input type="hidden" name="form-name" value="volunteer">
   <input type="text" name="first_name">
